--- a/Detecting_Pneumonia.ipynb
+++ b/Detecting_Pneumonia.ipynb
@@ -254,7 +254,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'kaggle.json': b'{\"username\":\"shashankpenumaka\",\"key\":\"46a358ecd85a11575f52017d0eea7216\"}'}"
+              "{'kaggle.json': b'{\"username\":\"shashankpenumaka\",\"key\":\"{{{{API KEY }}}}\"}'}"
             ]
           },
           "metadata": {},
